Compress coredumps with Zstandard